--- a/.github/workflows/faang.yml
+++ b/.github/workflows/faang.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install yfinance pandas matplotlib.plt
+          pip install yfinance pandas matplotlib
 
 
       - name: Run faang.py
