--- a/.github/workflows/faang.yml
+++ b/.github/workflows/faang.yml
@@ -8,7 +8,7 @@ on:
   # - cron: sets the time ("0 8" = 8am) and frequency ("* * 6" = every 6 days)
   # cron format is as follows: minute hour day-of-month month day-of-week
   # reference: https://cicube.io/blog/github-actions-cron/#how-to-use-cron-syntax-in-github-actions
-    - cron: '0 8 * * 6'  # Runs every Sunday at midnight
+    - cron: '0 8 * * 6'  # Runs Saturday morning
     # the next line allows manual triggering of the workflow from the Actions tab in GitHub
   workflow_dispatch:
 
